// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`episodeAvailability - Error Message should correctly render for expired episodes with audio skin 1`] = `
.emotion-0 {
  position: relative;
  min-height: 165px;
  margin-bottom: 2rem;
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34, 34, 34, 0.75);
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media screen and (forced-colors: active) {
  .emotion-2 {
    background-color: transparent;
  }
}

.emotion-3 {
  display: block;
  font-weight: normal;
  bottom: 0;
  position: absolute;
  padding: 0.5rem;
}

@media (min-width: 25rem) {
  .emotion-3 {
    padding: 1rem;
  }
}

@media screen and (forced-colors: active) {
  .emotion-3 {
    background-color: window;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div>
      <div
        class="emotion-2"
      >
        <strong
          class="emotion-3"
        >
          Dis thing no dey again
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`episodeAvailability - Error Message should correctly render for future episodes with video skin 1`] = `
.emotion-0 {
  margin: 2.5rem 0 1.5rem;
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

@media (max-width: 62.9375rem) {
  .emotion-0 {
    margin-top: 1rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-0 {
    margin: 1rem -1rem 0;
  }
}

@media (max-width: 24.9375rem) {
  .emotion-0 {
    margin: 0.5rem -0.5rem 0;
  }
}

.emotion-2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34, 34, 34, 0.75);
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media screen and (forced-colors: active) {
  .emotion-2 {
    background-color: transparent;
  }
}

.emotion-3 {
  display: block;
  font-weight: normal;
  bottom: 0;
  position: absolute;
  padding: 0.5rem;
}

@media (min-width: 25rem) {
  .emotion-3 {
    padding: 1rem;
  }
}

@media screen and (forced-colors: active) {
  .emotion-3 {
    background-color: window;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div>
      <div
        class="emotion-2"
      >
        <strong
          class="emotion-3"
        >
          De thing wey de here never ready for you to play.
        </strong>
      </div>
    </div>
  </div>
</div>
`;
